<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.transcend.actest.MainActivity">

    <EditText
        android:id="@+id/shoujihao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/shoujihao"/>
    <EditText
        android:id="@+id/yanzhengma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shoujihao"
        android:hint="请输入验证码"/>

    <EditText
        android:id="@+id/mima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yanzhengma"
        android:hint="@string/mima"/>
    <EditText
        android:id="@+id/xuehao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mima"
        android:hint="@string/xuehao"
        />
    <EditText
        android:id="@+id/xingming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xuehao"
        android:hint="@string/xingming"/>
    <EditText
        android:id="@+id/xueyuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xingming"
        android:hint="@string/xueyuan"/>
    <EditText
        android:id="@+id/nianji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/xueyuan"
        android:hint="@string/nianji"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nianji"
        android:text="@string/button2" />
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nianji"
        android:layout_toRightOf="@id/button2"
        android:text="获取验证码"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:text="@string/button1"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="管理员注册"
        android:layout_below="@+id/button1"/>

</RelativeLayout>
